# rust2

./: .env.example  CLAUDE.md  Cargo.toml  INTEGRATION_TEST_RESULTS.md  MESSAGE_DB_PHASE1_SUMMARY.md  MESSAGE_DB_PHASE5_SUMMARY.md  PHASE_3_COMPLETION.md  PHASE_4_COMPLETION.md  README.md  RUST_MESSAGE_DB_CLIENT_PLAN.md  TOOL_MACRO_GUIDE.md  docker-compose.yml  implementation-plan.md
docs/: ERROR_HANDLING_GUIDE.md  PERFORMANCE_TUNING_GUIDE.md
examples/: agent_calculator.rs  agent_simple.rs  consumer_example.rs  consumer_groups.rs  llm_simple.rs  optimistic_concurrency.rs  phase1_demo.rs  reading_streams.rs  transactions.rs  writing_events.rs
plans/: MESSAGE_DB_CLIENT_SPEC.md  MESSAGE_DB_PHASE4_SUMMARY.md  RUST_MESSAGE_DB_CLIENT_PLAN.md  agent-loop.md  api-spec.md  llm-abstraction-layer.md  registry-refactoring.md  tool-declaration-automation.md
research/: rust-vertex-claude  rust-vertex-gemini
rust2_tool_macros/: Cargo.toml
rust2_tool_macros/src/: lib.rs
sessions/: 2025-11-19-lets-write-a-simple-spec-for-an-httpjson-web-ser.txt  2025-11-19-read-api-specmd-and-lets-work-on-an-implementat.txt
src/: lib.rs  main.rs  models.rs  routes.rs  sse.rs
src/handlers/: get_thread.rs  mod.rs  send_message.rs
src/llm/: mod.rs
src/llm/agent/: error.rs  mod.rs
src/llm/auth/: adc.rs  mod.rs
src/llm/claude/: client.rs  mapper.rs  mod.rs  sse.rs  types.rs
src/llm/core/: config.rs  error.rs  mod.rs  provider.rs  types.rs
src/llm/gemini/: client.rs  mapper.rs  mod.rs  sse.rs  types.rs
src/llm/http/: mod.rs
src/llm/tools/: declaration.rs  executor.rs  mod.rs  registry.rs
src/message_db/: client.rs  connection.rs  error.rs  mod.rs  transaction.rs
src/message_db/consumer/: consumer.rs  mod.rs  position.rs
src/message_db/operations/: mod.rs  query.rs  read.rs  write.rs
src/message_db/types/: message.rs  mod.rs
src/message_db/utils/: mod.rs  parsing.rs
tests/: claude_integration_test.rs  consumer_test.rs  gemini_integration_test.rs  integration_test.rs  llm_factory_test.rs  operations_test.rs  transaction_test.rs
tests/common/: mod.rs
