[package]
name = "rust2"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = { version = "0.4", features = ["server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio-stream = "0.1"
