[package]
name = "rust2"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = { version = "0.4", features = ["server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio-stream = "0.1"
rust2_tool_macros = { path = "rust2_tool_macros" }

# Message DB client dependencies
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14"

# LLM abstraction layer dependencies
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
gcp_auth = "0.10"
futures = "0.3"
bytes = "1"
async-trait = "0.1"
thiserror = "2"
async-stream = "0.3"
pin-utils = "0.1"
schemars = "0.8"

[dev-dependencies]
testcontainers = "0.15"
tokio-test = "0.4"
dotenvy = "0.15"
